--- a/theme/userstyle.css
+++ b/theme/userstyle.css
@@ -15,9 +15,11 @@ html {
   /* set to none if no borders shall be shown (used for headlines here) */
   --border: 1px solid var(--border-color);
 
-  /* change to get the rounded edges for inputs, buttons and selects back */
-  --dialog-radius: 0;
-  --scroll-radius: 0;
+  /* TWEAK: Change to adapt the style of the corners of some UI elements */
+  --button-radius: 5px;
+  --dialog-radius: 10px;
+  --input-radius: 10px;
+  --scroll-radius: 3px;
 
   /* set to none if no shadow shall be shown below the floating toc */
   --shadow: 0px 4px 4px -4px rgba(0, 0, 0, 0.1);
@@ -34,6 +36,7 @@ body {
 
 /* scrollbars */
 ::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.1) !important;
   border-radius: var(--scroll-radius) !important;
 }
 
@@ -43,12 +46,12 @@ body {
 
 /* horizontal rule */
 hr {
-  border-bottom: var(--border) !important;
+  border-width: 1px !important;
 }
 
 /* strikethrough checked task list items (https://discourse.joplinapp.org/t/share-your-css/1730/189) */
 li.md-checkbox input[type="checkbox"]:checked + label {
-  text-decoration: line-through var(--font-dark);
+  text-decoration: line-through rgba(0, 0, 0, 0.5);
 }
 
 /**************************************************************************************************
