--- a/theme/userchrome.css
+++ b/theme/userchrome.css
@@ -238,6 +238,9 @@ span.icon-tags,
  *************************************************************************************************/
 
 /* global search */
+.rli-noteListControls {
+  height: auto !important;
+}
 .rli-noteListControls input {
   border: none !important;
 }
@@ -247,12 +250,51 @@ span.icon-tags,
   color: rgba(150, 150, 150, 0.4) !important;
 }
 
+/* note list */
+.rli-noteList > div {
+  /* remove border-right - introduced in 1.3.7 */
+  border-right: none !important;
+}
+
+/* note list entries */
+.rli-noteList > div > div:not(.note-list),
+.note-list > div:first-of-type {
+  background: none !important;
+  text-align: center !important;
+  /* TWEAK: enable to get a border above the first entry (also for empty folders) */
+  /* border-top: 1px solid rgba(0, 0, 0, 0.1) !important;
+  margin: 0 12px !important; */
+}
+.note-list .list-item-container {
+  margin: 0 12px !important;
+  width: auto !important;
+}
+.note-list .list-item-container::before {
+  border-color: rgba(0, 0, 0, 0.1) !important;
+  left: 0 !important;
+  width: 100% !important;
+}
+.note-list .list-item-container > a {
+  padding: 0 3px !important;
+}
+.note-list .list-item-container > div {
+  padding-left: 3px !important;
+}
+.note-list .list-item-container:hover {
+  background-color: rgba(0, 0, 0, 0.1) !important;
+}
+.note-list .list-item-container > a > span {
+  /* adds "..." to notes with long titles */
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 /* floating new note button */
 .rli-noteListControls > div > div:nth-child(2) {
   background: var(--primary);
-  border-radius: 100px;
+  border-radius: 100px !important;
   bottom: 15px;
-  box-shadow: -1px 2px 4px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
   color: rgb(255, 255, 255);
   height: 35px;
   position: fixed;
@@ -276,8 +318,8 @@ span.icon-tags,
   display: none;
 }
 .rli-noteListControls > div > div:nth-child(2):hover button {
-  border-radius: 200px !important;
-  box-shadow: -1px 2px 4px 0px rgba(0, 0, 0, 0.5) !important;
+  border-radius: 100px !important;
+  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5) !important;
   display: flex !important;
   margin: 0 10px 0 0 !important;
   min-height: 35px !important;
@@ -287,44 +329,6 @@ span.icon-tags,
 .rli-noteListControls > div > div:nth-child(2) button span {
   color: rgb(255, 255, 255) !important;
   font-size: 20px !important;
-}
-
-/* note list */
-.rli-noteList > div {
-  /* remove border-right - introduced in 1.3.7 */
-  border-right: none !important;
-}
-
-/* note list entries */
-.rli-noteList > div > div:not(.note-list),
-.note-list > div:first-of-type {
-  background: none !important;
-  text-align: center !important;
-  /* TWEAK: enable to get a border above the first entry (also for empty folders) */
-  /* border-top: 1px solid rgba(0, 0, 0, 0.1) !important;
-  margin: 0 10px !important; */
-}
-.note-list .list-item-container {
-  margin: 0 10px !important;
-  width: auto !important;
-}
-.note-list .list-item-container::before {
-  border-color: rgba(0, 0, 0, 0.1) !important;
-  left: 0 !important;
-  width: 100% !important;
-}
-.note-list .list-item-container > a,
-.note-list .list-item-container > div {
-  padding: 0 2px !important;
-}
-.note-list .list-item-container:hover {
-  background-color: rgba(0, 0, 0, 0.1) !important;
-}
-
-.note-list .list-item-container > a > span {
-  /* adds "..." to notes with long titles */
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 /* external editing icon */
